--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-    <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve</p>
-
+    <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve.</p>
 </body>
 </html>
