--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hola mundo</h1>
     <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve.</p>
+    <p>Aprendiendo a usar Visual Studio Code vinculado con GitHub para no tener que preocuparnos por la gestión de cambios en los ficheros.</p>
 </body>
 </html>
