--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <h1>Hola mundo</h1>
     <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve.</p>
     <p>Aprendiendo a usar Visual Studio Code vinculado con GitHub para no tener que preocuparnos por la gestión de cambios en los ficheros.</p>
+    <ul>
+        <li>+</li>
+        <li>Commit (simbolo "marca verifica")</li>
+        <li>Push</li>
+    </ul>
 </body>
 </html>
