--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve</p>
     <p>Aprendiendo a usar Visual Studio Code vinculado con GitHub para no tener que preocuparnos por la gestión de cambios en los ficheros.</p>
     <ul>
-        <li>pulsar +</li>
+        <li>pulsar hola +</li>
         <li>Commit (simbolo "marca verifica")</li>
         <li>Push</li>
     </ul>
