primera version funcional

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="./calcula.js"></script>
+    <title>Calculadora en JavaScript</title>
 </head>
 <body>
-    <h1>Hola mundo - Hello world</h1>
-    <p>Hemos vinculado Visual Studio Code con nuestro GitHub js_improve</p>
-    <p>Aprendiendo a usar Visual Studio Code vinculado con GitHub para no tener que preocuparnos por la gestión de cambios en los ficheros.</p>
-    <ul>
-        <li>pulsar hola +</li>
-        <li>Commit (simbolo "marca verifica")</li>
-        <li>Push</li>
-    </ul>
+    <h1>Calculadora en JavaScript</h1>
+    <h2>Variables de entrada</h2>
+    <p>Primer número: </p>
+    <input type="number" value="2" id="n1">
+    <p>Segundo número: </p>
+    <input type="number" value="5" id="n2">
+
+    <p>Pulse el botón para sumar.</p>
+    <input type="button" value="Sumar" onclick="sumar()">
+    <h2>Resultado</h2>
+    <p id="total"></p>
 </body>
 </html>
