--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <script src="./calcula.js"></script>
     <title>Calculadora en JavaScript</title>
 </head>
