--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="number" value="5" id="n2">
     <p>Pulse el botón para sumar.</p>
     <input type="button" value="Sumar" onclick="sumar()">
-    <h2>Resultado</h2>
+    <h2 id="resultH2">Resultado</h2>
     <p id="total"></p>
 </body>
 </html>
