--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
-    <script src="./calcula.js"></script>
-    <title>Calculadora en JavaScript</title>
+    <title>Calculadoras</title>
 </head>
 <body>
-    <h1>Calculadora en JavaScript</h1>
-    <h2>Variables de entrada</h2>
-    <p>Primer número: </p>
-    <input type="number" value="2" id="n1">
-    <p>Segundo número: </p>
-    <input type="number" value="5" id="n2">
-    <p>Pulse el botón para sumar.</p>
-    <input type="button" value="Sumar" onclick="sumar()">
-    <h2 id="resultH2">Resultado</h2>
-    <p id="total"></p>
+    <h1>Calculadoras en JavaScript</h1>
+    <ul>
+        <li><a href="./sumados.html">Sumar dos números</a></li>
+        <li><a href="./valorOpcion.html">Valoración de opciones por Black-Scholes</a></li>
+    <ul>
 </body>
 </html>
