New CSS for valorOpcion.html

--- a/valorOpcion.html
+++ b/valorOpcion.html
@@ -11,12 +11,12 @@
     <p>Valor de una opción CALL europea por el método de Black-Scholes.</p>
     <h2>Variables de entrada</h2>
     <ul>
-        <li>Precio Spot del activo subyacente: S <input type="number" value="100" id="S"></li>
-        <li>Precio de ejercicio (Strike): E <input type="number" value="110" id="E"></li>
-        <li>Volatilidad (en tanto por uno): &sigma; <input type="number" value="0.2" id="sigma"> </li>
-        <li>Rentabilidad libre de riesgo:<br>
-        Tanto efectivo anual en tanto por uno: <i>i</i> <input type="number" value="0.07" id="tanto"></li>
-        <li>Duración hasta vencimiento en años: T <input type="number" value="2" id="T"> </li>
+        <li class="main">Precio Spot del activo subyacente: S <input type="number" value="100" id="S"></li>
+        <li class="main">Precio de ejercicio (Strike): E <input type="number" value="110" id="E"></li>
+        <li class="main">Volatilidad (en tanto por uno): &sigma; <input type="number" value="0.2" id="sigma"> </li>
+        <li class="main">Rentabilidad libre de riesgo:<br></li>
+        <li class="main"><p style="margin: 0px;">Tanto efectivo anual en tanto por uno: <i>i</i></p> <input type="number" value="0.07" id="tanto"></li>
+        <li class="main">Duración hasta vencimiento en años: T <input type="number" value="2" id="T"> </li>
     </ul>
     <p>Pulse el botón para obtener el precio teórico de un CALL europeo.</p>
     <input type="button" value="CALL por Black-Scholes" onclick="CALLeuropea()">
