--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
     <title>Calculadoras</title>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <h1>Calculadoras en JavaScript</h1>
@@ -11,5 +12,12 @@
         <li><a href="./sumados.html">Sumar dos números</a></li>
         <li><a href="./valorOpcion.html">Valoración de opciones por Black-Scholes</a></li>
     <ul>
+    <h2>Fórmula de ejemplo con MathJax</h2>
+    <p>
+        Cuando \(a \ne 0\), hay dos soluciones para \(ax^2 + bx + c = 0\) y están dadas por la fórmula cuadrática:
+    </p>
+    <p>
+        \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}\]
+    </p>
 </body>
 </html>
